fix: wrap author name

--- a/style.css
+++ b/style.css
@@ -244,6 +244,11 @@
   font-style: italic;
   overflow: hidden; }
 
+.author-clip {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; }
+
 .tooltip {
   min-width: 100px;
   position: absolute; }
